[package]
name = "aa"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aa"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
#anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-associated-token-account = "1.0.3"
solana-program = "1.18.1"